force-app/main/default/objects/Review__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Поле для пользовательских пометок к обзору.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>