force-app/main/default/objects/Review__c/fields/Package_Convenience_Score__c.field-meta.xml
<CustomField>
    <fullName>Package_Convenience_Score__c</fullName>
    <description>Оценка качества упаковки.</description>
    <label>Package Convenience Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X5_Star_Rating</valueSetName>
    </valueSet>
</CustomField>