force-app/main/default/objects/Review__c/fields/Richness_Of_Taste_Score__c.field-meta.xml
<CustomField>
    <fullName>Richness_Of_Taste_Score__c</fullName>
    <label>Richness Of Taste Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X5_Star_Rating</valueSetName>
    </valueSet>
</CustomField>