force-app/main/default/objects/Review__c/fields/Sirok__c.field-meta.xml
<CustomField>
    <fullName>Sirok__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sirok</label>
    <referenceTo>Sirok__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>