force-app/main/default/objects/Review__c/fields/Sweetness_Score__c.field-meta.xml
<CustomField>
    <fullName>Sweetness_Score__c</fullName>
    <description>Оценка сладости.</description>
    <label>Sweetness Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X5_Star_Rating</valueSetName>
    </valueSet>
</CustomField>