force-app/main/default/objects/Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sirok__c</columns>
    <columns>Description__c</columns>
    <columns>Package_Convenience_Score__c</columns>
    <columns>Richness_Of_Taste_Score__c</columns>
    <columns>Sweetness_Score__c</columns>
    <columns>Overall_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>